--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   ],
   "devDependencies": {
     "grunt": ">=0.4.5",
+    "grunt-contrib-connect": "^0.9.0",
     "grunt-jsdoc": ">=0.6.3",
     "grunt-newer": ">=1.1.0",
     "jaguarjs-jsdoc": ">=0.0.1",
