--- a/package.json
+++ b/package.json
@@ -25,17 +25,24 @@
   "homepage": "https://github.com/rainersu/color",
   "keywords": [
     "color",
-    "convert",
-    "schema",
+    "scheme",
+	"chroma",
+	"tone",
     "palette",
-    "colorspace",
+	"gradient",
+	"spectrum",
+	"blend",
+    "convert",
+	"conversion",
+	"scale",
+    "space",
     "browser",
     "library",
     "javascript"
   ],
   "devDependencies": {
     "grunt": ">=0.4.5",
-    "grunt-contrib-connect": "^0.9.0",
+    "grunt-contrib-connect": ">=0.9.0",
     "grunt-jsdoc": ">=0.6.3",
     "grunt-newer": ">=1.1.0",
     "jaguarjs-jsdoc": ">=0.0.1",
