--- a/package.json
+++ b/package.json
@@ -41,16 +41,18 @@
     "javascript"
   ],
   "devDependencies": {
-    "connect-livereload": ">=0.5.3",
     "grunt": ">=0.4.5",
-    "grunt-contrib-clean": ">=0.6.0",
-    "grunt-contrib-connect": ">=0.9.0",
-    "grunt-contrib-watch": ">=0.6.1",
     "grunt-jsdoc": ">=0.6.3",
-    "grunt-newer": ">=1.1.0",
-    "jaguarjs-jsdoc": ">=0.0.1",
+    "grunt-contrib-clean": ">=0.6.0",
+    "grunt-contrib-uglify": ">=0.8.0",
+    "grunt-contrib-connect": ">=0.9.0",
     "load-grunt-tasks": ">=3.1.0",
+    "jaguarjs-jsdoc": ">=0.0.1",
     "requirejs": ">=2.1.16",
+
+    "grunt-newer": ">=1.1.0",
+    "connect-livereload": ">=0.5.3",
+    "grunt-contrib-watch": ">=0.6.1",
     "time-grunt": ">=1.1.0"
   }
 }
