--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "color",
   "version": "1.0.0",
-  "description": "A Javascript color library. ",
+  "description": "Just a Javascript color library. ",
   "main": "index.js",
   "scripts": {
     "build": "npm install && grunt",
-    "start": "grunt watch",
-    "test": "grunt test"
+    "start": "grunt run"
   },
   "repository": {
     "type": "git",
@@ -42,17 +41,17 @@
   ],
   "devDependencies": {
     "grunt": ">=0.4.5",
-    "grunt-jsdoc": ">=0.6.3",
     "grunt-contrib-clean": ">=0.6.0",
-    "grunt-contrib-uglify": ">=0.8.0",
     "grunt-contrib-connect": ">=0.9.0",
-    "load-grunt-tasks": ">=3.1.0",
+    "grunt-contrib-uglify": ">=0.8.0",
+    "grunt-contrib-watch": ">=0.6.1",
+    "grunt-jsdoc": ">=0.6.3",
+    "grunt-umd": ">=2.3.3",
     "jaguarjs-jsdoc": ">=0.0.1",
     "requirejs": ">=2.1.16",
-
-    "grunt-newer": ">=1.1.0",
+    "load-grunt-tasks": ">=3.1.0",
     "connect-livereload": ">=0.5.3",
-    "grunt-contrib-watch": ">=0.6.1",
+    "grunt-newer": ">=1.1.0",
     "time-grunt": ">=1.1.0"
   }
 }
