--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "url": "http://cn.linkedin.com/in/rainersu",
     "qq": "2627001536"
   },
-  "license": "Apache-2.0",
+  "license": "BSD",
   "bugs": {
     "url": "https://github.com/rainersu/color/issues",
     "email": "rainersu@foxmail.com"
