--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "sumi-color",
   "title": "sumi-color",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A tiny but powerful JavaScript library for all kinds of color manipulations.",
-  "main": "dist/color.js",
+  "main": "dist/sumi-color.js",
   "homepage": "http://rainersu.github.io/color",
   "author": {
     "name": "Rainer Su",
